Refined Logic for reword Summery. till Date 12-0-2025 for unit testing